<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <data>


        <variable
            name="activity"
            type="com.las.atmosherebinauraltherapy.views.dialog.ShowExistDialog" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/exit_appliction"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_dialog"
            android:padding="10dp"
            android:text="@string/press_again_to_exit" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_msg"
            android:visibility="gone"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="@string/banner_ad_id" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_rate_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="@{(view)->activity.onClick(view)}"
                android:text="@string/rate_us" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/dialog_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="@{(view)->activity.onClick(view)}"
                android:text="@string/text_no" />

            <Button
                android:id="@+id/dialog_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="@{(view)->activity.onClick(view)}"
                android:text="@string/text_yes" />
        </LinearLayout>
    </LinearLayout>
</layout>